fix: removed line height as it caused truncate for some letters

--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -635,7 +635,6 @@ body {
 		@include get_textstyle("sm", "regular");
 		justify-content: space-between;
 		box-shadow: none;
-		line-height: 1;
 	}
 }
 .attachment-row {
